@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.19==========
+2025-
+*1. 基于TinUILight, TinUIDark的Dialog附加样式类
+2. entry中有内容就显示删除按钮
+3. 删除passwordbox输入判定
+
 ==========5.18==========
 2025-2-12
 1. 修复列表选择对话框的尺寸错误问题
